<resources>
    <string name="app_name">trab1JoaoPCassio</string>
    <string name="descri_o">Descrição</string>
    <string name="facilitador">Facilitador</string>
    <string name="hora">Hora</string>
    <string name="dia">Dia</string>
    <string name="t_tulo">Título</string>
    <string name="lista_de_nomes">Lista de Nomes:</string>
    <string name="lista_de_eventos">Lista de Eventos:</string>
</resources>
