<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="310dp"
        android:layout_marginRight="310dp"
        android:layout_marginBottom="476dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Cadastrar Evento" />

    <Button
        android:id="@+id/btn_cadastrar"
        tools:text="Cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="433dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:ems="10"
        android:hint="@string/t_tulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_dia"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/dia"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_facilitador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_hora"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="241dp"
        android:layout_marginRight="241dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/hora"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_facilitador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_dia"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_facilitador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/facilitador"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_desc"
        android:layout_width="355dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/descri_o"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />
</android.support.constraint.ConstraintLayout>